--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -26,7 +26,7 @@
 		      <div class="collapse navbar-collapse" id="navbarResponsive">
 		        <ul class="navbar-nav ml-auto">
 		          <li class="nav-item">
-		            <a class="nav-link" href="#"><i class="fas fa-shopping-cart"></i> Cart</a>
+		            <a class="nav-link" href="{{ path('cart') }}"><i class="fas fa-shopping-cart"></i> Cart</a>
 		          </li>
 		        </ul>
 		      </div>
