--- a/templates/products/index.html.twig
+++ b/templates/products/index.html.twig
@@ -27,7 +27,7 @@
                 <p class="card-text">{{ product.description }}</p>
               </div>
               <div class="card-footer">
-                <button class="btn btn-success"> Add To Cart </button>
+                <a href="{{ path('cart') }}" class="btn btn-success"> Add To Cart </a>
               </div>
             </div>
           </div>
