--- a/templates/cart/index.html.twig
+++ b/templates/cart/index.html.twig
@@ -20,72 +20,35 @@
 				</tr>
 			</thead>
 			<tbody>
+				{% set total = 0 %}
+				{% for item in cart_items %}
 				<tr>
 					<td data-th="Product">
 						<div class="row">
-							<div class="col-sm-3 hidden-xs"><img src="http://placehold.it/100x100" alt="..." class="img-responsive"/></div>
+							<div class="col-sm-3 hidden-xs"><img style="width:100%;height:auto;" src="{{ asset('products/') ~ item.image }}" alt="..." class="img-responsive"/></div>
 							<div class="col-sm-9">
-								<h4 class="nomargin">Product 1</h4>
-								<p>Quis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Lorem ipsum dolor sit amet.</p>
+								<h4 class="nomargin">{{ item.name }}</h4>
+								<p>{{ item.description }}</p>
 							</div>
 						</div>
 					</td>
-					<td data-th="Price">$1.99</td>
+					<td data-th="Price">${{ item.price }}</td>
 					<td data-th="Quantity">
-						<input type="number" class="form-control text-center" value="1">
+						<input type="number" class="form-control text-center" value="{{ item.quantity }}">
 					</td>
-					<td data-th="Subtotal" class="text-center">1.99</td>
+					<td data-th="Subtotal" class="text-center">${{ item.subtotal }}</td>
 					<td class="actions" data-th="">
 						<button class="btn btn-danger btn-sm"><i class="fas fa-trash"></i></button>								
 					</td>
 				</tr>
-				<tr>
-					<td data-th="Product">
-						<div class="row">
-							<div class="col-sm-3 hidden-xs"><img src="http://placehold.it/100x100" alt="..." class="img-responsive"/></div>
-							<div class="col-sm-9">
-								<h4 class="nomargin">Product 1</h4>
-								<p>Quis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Lorem ipsum dolor sit amet.</p>
-							</div>
-						</div>
-					</td>
-					<td data-th="Price">$1.99</td>
-					<td data-th="Quantity">
-						<input type="number" class="form-control text-center" value="1">
-					</td>
-					<td data-th="Subtotal" class="text-center">1.99</td>
-					<td class="actions" data-th="">
-						<button class="btn btn-danger btn-sm"><i class="fas fa-trash"></i></button>								
-					</td>
-				</tr>
-				<tr>
-					<td data-th="Product">
-						<div class="row">
-							<div class="col-sm-3 hidden-xs"><img src="http://placehold.it/100x100" alt="..." class="img-responsive"/></div>
-							<div class="col-sm-9">
-								<h4 class="nomargin">Product 1</h4>
-								<p>Quis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Lorem ipsum dolor sit amet.</p>
-							</div>
-						</div>
-					</td>
-					<td data-th="Price">$1.99</td>
-					<td data-th="Quantity">
-						<input type="number" class="form-control text-center" value="1">
-					</td>
-					<td data-th="Subtotal" class="text-center">1.99</td>
-					<td class="actions" data-th="">
-						<button class="btn btn-danger btn-sm"><i class="fas fa-trash"></i></button>								
-					</td>
-				</tr>
+				{% set total = total + item.subtotal %}
+			{% endfor %}
 			</tbody>
 			<tfoot>
-				<tr class="visible-xs">
-					<td class="text-center"><strong>Total 1.99</strong></td>
-				</tr>
 				<tr>
 					<td><a href="/" class="btn btn-warning"><i class="fas fa-angle-left"></i> Continue Shopping</a></td>
 					<td colspan="2" class="hidden-xs"></td>
-					<td class="hidden-xs text-center"><strong>Total $1.99</strong></td>
+					<td class="hidden-xs text-center"><strong>Total ${{ total }}</strong></td>
 				</tr>
 			</tfoot>
 		</table>
