--- a/templates/products/index.html.twig
+++ b/templates/products/index.html.twig
@@ -27,7 +27,7 @@
                 <p class="card-text">{{ product.description }}</p>
               </div>
               <div class="card-footer">
-                <a href="{{ path('cart') }}" class="btn btn-success"> Add To Cart </a>
+                <a href="{{ path('add_to_cart', {product_id: product.id}) }}" class="btn btn-success"> Add To Cart </a>
               </div>
             </div>
           </div>
