--- a/templates/cart/index.html.twig
+++ b/templates/cart/index.html.twig
@@ -38,7 +38,7 @@
 					</td>
 					<td data-th="Subtotal" class="text-center">${{ item.subtotal }}</td>
 					<td class="actions" data-th="">
-						<button class="btn btn-danger btn-sm"><i class="fas fa-trash"></i></button>								
+						<a href="{{ path('delete_cart_item', {id: item.cart_product_id}) }}" class="btn btn-danger btn-sm"><i class="fas fa-trash"></i></a>								
 					</td>
 				</tr>
 				{% set total = total + item.subtotal %}
