remove unnecssary functions and display flash messages

--- a/templates/cart/index.html.twig
+++ b/templates/cart/index.html.twig
@@ -9,6 +9,12 @@
   <!-- Page Content -->
   <div class="container">
 
+{% for message in app.flashes('success') %}
+	<div class="alert alert-success">
+		{{ message }}
+	</div>
+{% endfor %}
+
 		<table id="cart" class="table table-hover table-condensed">
 			<thead>
 				<tr>
